Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MethodReference04.out
MethodReference04.java:13:16: compiler.err.prob.found.req: (compiler.misc.not.a.functional.intf: java.lang.Object)
1 error
